# trova

./: .gitignore  LICENSE  README.md  docker-compose.search.yml  index.html  package-lock.json  package.json
.github/workflows/: release.yml
design-review/: contact-sheet.html
docs/: typesense-schema.json
scripts/: build-backend-binary.mjs  capture-setup-screens.mjs  chat-debug.mjs  e2e-playwright.mjs  generate-home-assets.mjs  generate-icon-assets.mjs  generate-settings-assets.mjs  generate-setup-assets.mjs  goal-product-helpers.mjs  goal1-core-test.mjs  goal10-release-test.mjs  goal11-setup-test.mjs  goal12-doctor-test.mjs  goal13-installer-test.mjs  goal14-search-quality-test.mjs  goal15-vision-test.mjs  goal16-person-test.mjs  goal17-media-test.mjs  goal18-remote-access-test.mjs  goal19-privacy-remote-test.mjs  goal2-semantic-test.mjs  goal20-ui-final-test.mjs  goal21-desktop-release-test.mjs  goal22-simple-copy-test.mjs  goal23-auto-setup-test.mjs  goal24-auto-installer-test.mjs  goal25-simple-status-test.mjs  goal26-repair-test.mjs  goal27-user-qa-test.mjs  goal28-nvidia-summary-test.mjs  goal3-vision-test.mjs  goal4-cli-mcp-test.mjs  goal5-remotes-test.mjs  goal8-packaging-test.mjs  goal9-ui-smoke-test.mjs  home-visual-check.mjs  icon-visual-check.mjs  local-backend.mjs  search-service.mjs  setup-release-signing.mjs  (+4 more)
src/: HomeAnimatedScene.tsx  gemini.ts  generatedIcons.tsx  localVision.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
