[package]
name = "trova"
version = "0.1.0"
description = "Local-first file search"
authors = ["Fabio"]
edition = "2021"

[lib]
name = "trova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22.1"
dirs = "6.0.0"
docx-rs = "0.4.17"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
lopdf = "0.35.0"
notify = "8.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tauri = { version = "2.9.1", features = [] }
walkdir = "2.5.0"
zip = "2.2.2"
rfd = "0.17.2"
tauri-plugin-global-shortcut = "2"
